--- a/src/Um2/BlogBundle/Resources/views/Blog/post.html.twig
+++ b/src/Um2/BlogBundle/Resources/views/Blog/post.html.twig
@@ -19,12 +19,14 @@
     <a href="{{ path('um2_blog_homepage') }}" class="small button radius">
       Retour à la liste
     </a>
-    <a href="{{ path('um2_blog_modifier', {'id': article.id}) }}" class="small success button radius">
-      Modifier l'article
-    </a>
-    <a href="{{ path('um2_blog_supprimer', {'id': article.id}) }}" class="small alert button radius" id="delete-btn">
-      Supprimer l'article
-    </a>
+    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+      <a href="{{ path('um2_blog_modifier', {'id': article.id}) }}" class="small success button radius">
+        Modifier l'article
+      </a>
+      <a href="{{ path('um2_blog_supprimer', {'id': article.id}) }}" class="small alert button radius" id="delete-btn">
+        Supprimer l'article
+      </a>
+    {% endif %}
   </p>
 
 {% endblock %}
